testing Chat suggestions

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -42,7 +42,7 @@
                 <li class="secondli">revise NY State&#39;s <uppercase>IMPOSSIBLE</uppercase> energy <uppercase>MANDATEs</uppercase> (70% carbon&ndash;free in 2030) &ndash;one of most the aggressive in the world&#33;</li>
             </ol> 
         
-        <!-- <br><br><br><br><br>  -->
+        <br><br><br><br><br>  
         </div>
         <div class="container bggreyissues"> 
         <span class="red">FIX THE FLOODING PROBLEM FINALLY&#33;</span> Every time it rains heavily, our residents still fear for homes and families. Many have repeatedly paid for extensive repairs without government help while incurring surging flood insurance premiums. <uppercase><b>YET VERY LITTLE HAS BEEN DONE</b> OVER MANY YEARS</uppercase> to contain flood risks. 
@@ -66,5 +66,109 @@
             </ul>
     </div>
    </ul>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vote for KVK!</title>
+  <link rel="icon" type="image/x-icon" href="./kvkfavicon.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    .uppercase {
+      text-transform: uppercase;
+    }
+    .red {
+      color: red;
+      font-weight: bold;
+      display: block;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+    ul, ol {
+      padding-left: 1.25rem;
+    }
+    ul li, ol li {
+      margin-bottom: 0.75rem;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-md">
+    <div class="container">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://www.anedot.com/"><button class="button">DONATE<br>$&nbsp;$&nbsp;$</button></a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Issues Section -->
+  <div class="container bggreyissues firstissue">
+    <span class="red">JUST CUT TAXES ALREADY!</span>
+    <p>Property Taxes in Westchester (and <i>especially</i> the Sound Shore) remain the <strong><u class="uppercase">highest</u> in the United States!</strong> The County can afford to lower them. This will <u>lower rents</u> too!</p>
+    <ul>
+      <li>Reduce the sky-high mortgage recording tax and real estate transfer taxes.</li>
+      <li>Lower the Sales Tax raised in 2019. Support local businesses and give breaks to first responders and the neediest.</li>
+    </ul>
+  </div>
+
+  <div class="container bggreyissues">
+    <span class="red">GIVE US OUR FAIR SHARE!</span>
+    <p>Our District pays more in taxes to NY State and Westchester County than it gets back in services.</p>
+    <ul>
+      <li>Oppose MTA payroll tax hikes and the congestion pricing tax.</li>
+    </ul>
+  </div>
+
+  <div class="container bggreyissues">
+    <span class="red">STOP CON ED'S OUTRAGEOUS RATE HIKES!</span>
+    <p>Kurt wants to:</p>
+    <ol>
+      <li>Lower high local taxes on Con Ed that inflate our bills</li>
+      <li>Disgorge excessive profits and executive pay</li>
+      <li>Stop subsidizing NYC's outdated grid</li>
+      <li>Revise NY State’s <span class="uppercase">impossible</span> energy <span class="uppercase">mandates</span> (70% carbon-free by 2030)</li>
+    </ol>
+  </div>
+
+  <div class="container bggreyissues">
+    <span class="red">FIX THE FLOODING PROBLEM FINALLY!</span>
+    <p>Heavy rains still threaten homes and families. Residents face repair costs and rising flood insurance premiums. <strong class="uppercase">Very little has been done</strong> over many years to mitigate the risks.</p>
+    <ul>
+      <li>Much of Mamaroneck’s flooding comes from storm system neglect and overdevelopment. <strong>Your local representatives <span class="uppercase">must</span> answer for this!</strong></li>
+    </ul>
+  </div>
+
+  <div class="container bggreyissues">
+    <span class="red">PROTECT OUR GREAT QUALITY OF LIFE!</span>
+    <p>Let’s make our streets <span class="uppercase">safer</span> and <i>keep our schools focused on the <span class="uppercase">right priorities</span></i>.</p>
+    <ul>
+      <li>End "Sanctuary County" games that risk losing $100s of millions in federal aid. Protect our Latin American neighborhoods that enrich our lives.</li>
+      <li>Expand recreational facilities for youth. Continue efforts to clean the Sound.</li>
+    </ul>
+    <div class="text-center">
+      <img class="kvkfamily" src="./kvkfamily.jpg" alt="KVK with family" />
+      <img class="kvk3" src="./kvk3.jpg" alt="KVK speaking" />
+    </div>
+  </div>
+
+  <div class="container bggreyissues mb-5">
+    <span class="red">KEEP NATIONAL POLITICS OUT OF DISTRICT 7!</span>
+    <p>District 7’s needs don’t match national narratives. Kurt is a proven manager and problem-solver who <strong class="uppercase">uses common sense</strong>, not ideology!</p>
+    <ul>
+      <li>Restore a traditional two-party system of checks and balances to the County Legislature.</li>
+    </ul>
+  </div>
+
 </body>
 </html>
