--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <div class="contactdiv container greybg">
-      <img src="./logo2silver.jpg"/>
+      <img class="newlogo" src="./newkvklogo.png"/>
     <form class="form contactform">
         <div class="form-group">
         <p>For questions, comments, or to volunteer, please fill out the form below or email: <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkvk@gmail.com</u></a>  and I will respond soon. Thank you.</p>
@@ -61,4 +61,113 @@
       </form>
     </div>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vote for KVK!</title>
+  <link rel="icon" type="image/x-icon" href="./kvkfavicon.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    .newlogo {
+      display: block;
+      margin: 2rem auto 1rem;
+      max-width: 200px;
+    }
+    .emailfriend {
+      color: darkgoldenrod;
+    }
+    .bigger {
+      font-size: 1.1rem;
+    }
+    .form-control {
+      margin-bottom: 1rem;
+    }
+    .form-check {
+      margin-bottom: 1rem;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-md">
+    <div class="container">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
+        <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://www.anedot.com/"><button class="button">DONATE<br>$&nbsp;$&nbsp;$</button></a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Contact Form -->
+  <div class="container greybg contactdiv mt-4">
+    <img class="newlogo" src="./newkvklogo.png" alt="KVK campaign logo" />
+
+    <form name="contact" method="POST" data-netlify="true" netlify class="form contactform">
+      <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below or email: 
+        <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkvk@gmail.com</u></a>.
+        I’ll respond as soon as possible. Thank you!
+      </p>
+
+      <div class="mb-3">
+        <label class="form-label bigger" for="fname">First Name</label>
+        <input type="text" class="form-control" id="fname" name="fname" placeholder="George">
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label bigger" for="lname">Last Name</label>
+        <input type="text" class="form-control" id="lname" name="lname" placeholder="Washington">
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label bigger" for="fulladdress">Full Address</label>
+        <input type="text" class="form-control" id="fulladdress" name="fulladdress" placeholder="1600 Pennsylvania Avenue NW">
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label bigger" for="phonenumber">Phone Number</label>
+        <input type="text" class="form-control" id="phonenumber" name="phonenumber" placeholder="XXX-XXX-XXXX">
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label bigger" for="email">Email</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="gw@gmail.com">
+      </div>
+
+      <div class="mb-4">
+        <label class="form-label bigger" for="message">Message</label>
+        <textarea class="form-control" id="message" name="message" rows="4" placeholder="I know a way to help your campaign"></textarea>
+      </div>
+
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="signup">
+        <label class="form-check-label" for="signup">Sign Up For Newsletter</label>
+      </div>
+
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="lawnsign">
+        <label class="form-check-label" for="lawnsign">Lawn Sign</label>
+      </div>
+
+      <div class="form-check mb-4">
+        <input type="checkbox" class="form-check-input" id="volunteer">
+        <label class="form-check-label" for="volunteer">Volunteer</label>
+      </div>
+
+      <div class="text-center">
+        <button type="submit" class="btn button">Submit</button>
+      </div>
+    </form>
+  </div>
+
+</body>
 </html>
+
