--- a/experience.html
+++ b/experience.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,6 +68,97 @@
 
 
 
+
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vote for KVK!</title>
+  <link rel="icon" type="image/x-icon" href="./kvkfavicon.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    .uppercase {
+      text-transform: uppercase;
+    }
+    ul {
+      padding-left: 1.25rem;
+    }
+    ul li {
+      margin-bottom: 0.75rem;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-md">
+    <div class="container">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://www.anedot.com/"><button class="button">DONATE<br>$&nbsp;$&nbsp;$</button></a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Intro -->
+  <div class="container greybgexp mt-4 text-center">
+    <h2>Choose a proven over-achiever, a renowned <span class="uppercase">expert</span> in Local Government Finance!</h2>
+  </div>
+
+  <!-- Bio Content -->
+  <div class="container text-center mt-4">
+    <img class="kvk5" src="./kvk5.jpg" alt="Kurt van Kuller" />
+  </div>
+
+  <div class="container greybgexp">
+    <p><strong><u>Longtime Rye homeowner.</u></strong> Raised two sons through Rye public schools. Married 37 years to Diana, member of Screen Actors Guild. Homeowner near Rye Town Park. Native to NYC and Westchester. 9/11 Survivor.</p>
+  </div>
+
+  <div class="container text-center mt-4">
+    <img class="kvkandmom" src="./kvkandmom.png" alt="Kurt and mother" />
+  </div>
+
+  <div class="container greybgexp">
+    <p><strong><u>Leading Municipal Finance Expert:</u></strong> Legendary 47-year career in Public Finance on Wall Street. Nationally known in municipal bond market; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world's largest banks. Managed departments of professionals, including 16 years as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm. <strong>Now a Full Time Public Servant.</strong></p>
+  </div>
+
+  <div class="container greybgexp">
+    <p><strong><u>Unprecedented Amount of Awards</u></strong> as a Municipal Bond analyst:</p>
+    <ul>
+      <li>First place 11 times in <em>Institutional Investor</em>, twice in <em>The Bond Buyer</em>, 19 times in <em>Smiths Research and Gradings</em>.</li>
+      <li>Second and third place awards received 11 additional times.</li>
+      <li>Cited by <em>Institutional Investor</em> as one of 10 <em>“Best of the Best”</em> for expertise, communication, and accuracy.</li>
+      <li><span class="uppercase">Award of Excellence</span> from National Federation of Municipal Analysts.</li>
+    </ul>
+  </div>
+
+  <div class="container greybgexp">
+    <p><strong><u>Foremost National Expert on Housing and Real Estate Debt:</u></strong> Testified numerous times before <span class="uppercase">U.S.</span> Congress and Senate. Appointed by National Housing Advisory Panel by NY Senator D'Amato. Groundbreaking research changed market practices. Contributing Author to Frank Fabozzi's <em>Handbook of Municipal Bonds</em>.</p>
+  </div>
+
+  <div class="container greybgexp">
+    <p><strong><u>Widely Recognized Public Speaker and Media Commentator</u></strong> on municipal bonds. Extensive press portfolio and research published. Regular conference organizer and chairman. LinkedIn Champion.</p>
+  </div>
+
+  <div class="container greybgexp">
+    <p><strong><u>Professional Organizations & Public Service:</u></strong> Volunteer at Resurrection Church in Rye. Member and donor for Rye Historical Society, Jay Estate, POTS, Save the Sound, Friends of Read Wildlife, and more. Past Board Member & Treasurer of Municipal Forum of New York. Member and past Chairman of Municipal Analysts Group of New York. Member of the National Federation of Municipal Analysts and former Board Member.</p>
+  </div>
+
+  <div class="container greybgexp">
+    <p><strong class="uppercase"><u>Media Appearances:</u></strong> Bloomberg News (TV and radio), CNN, Wall Street Journal, New York Times, Forbes, NY Post, Daily News, Investment Dealer's Digest, Money, Dow Jones, The Bond Buyer, Research & Ratings Review, Mortgage Banking, Municipal Finance Journal, Public Finance Journal, Market Chronicle, Securities Week, Municipal Bond Portfolio Management, <span class="uppercase">Credit Market Watch</span> and more.</p>
+  </div>
+
+  <div class="container greybgexp mb-5">
+    <p><strong><u>Education:</u></strong> MBA in Finance, SUNY Albany (1980), Full Scholarship. B.A. from SUNYA. Regents Scholarship recipient. Certified Financial Analyst (CFA) since 1993.</p>
+  </div>
 
 </body>
 </html>
