--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,5 +48,171 @@
        </ol>
     </div>
       
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vote for KVK!</title>
+  <link rel="icon" href="./kvkfavicon.png" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f8f9fa;
+      color: #212529;
+    }
+
+    .navbar {
+      background-color: #003366;
+    }
+
+    .navbar-nav .nav-link {
+      color: white !important;
+      font-weight: 600;
+    }
+
+    .navbar-nav .nav-link:hover {
+      text-decoration: underline;
+    }
+
+    .banner {
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    .vote {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #cc0000;
+    }
+
+    .bwpic {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 8px;
+      margin: 1rem 0;
+    }
+
+    .greybg {
+      background-color: #e9ecef;
+      padding: 2rem;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+    }
+
+    .gold {
+      color: goldenrod;
+      font-size: 2rem;
+      font-weight: 700;
+    }
+
+    .blue {
+      color: #003366;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+
+    .blue2 {
+      color: #0056b3;
+    }
+
+    .kvk2 {
+      width: 100%;
+      max-width: 400px;
+      display: block;
+      margin: 2rem auto;
+      border-radius: 8px;
+    }
+
+    .effective, .meet {
+      font-size: 1.25rem;
+      text-align: center;
+    }
+
+    .boldupper {
+      text-transform: uppercase;
+      font-weight: 700;
+    }
+
+    .talkingpoints li {
+      margin-bottom: 0.75rem;
+      font-size: 1.1rem;
+    }
+
+    .button {
+      background-color: #cc0000;
+      color: white;
+      font-weight: bold;
+      border-radius: 5px;
+      padding: 0.5rem 1.25rem;
+      border: none;
+      transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #a30000;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-md">
+    <div class="container">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
+        <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://www.anedot.com/"><button class="button">DONATE<br>$&nbsp;$&nbsp;$</button></a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Main Banner -->
+  <div class="banner">
+    <h1 class="vote">Vote KVK!</h1>
+    <img class="bwpic" src="./kvkpic.jpg" alt="Kurt van Kuller" />
+    <h1 class="vote">Vote KVK!</h1>
+  </div>
+
+  <!-- Candidate Info -->
+  <div class="greybg container text-center">
+    <h1 class="gold">Kurt van Kuller</h1>
+    <h3><i>for</i></h3>
+    <h2 class="blue">WESTCHESTER COUNTY LEGISLATOR, DISTRICT 7</h2>
+    <h2 class="blue2">(Larchmont, Mamaroneck, Rye, Harrison)</h2>
+  </div>
+
+  <!-- Message -->
+  <div class="greybg container">
+    <p class="effective">For effective, professional leadership!<br>No more broken promises!<br>Let’s elect someone who understands us and delivers on what’s important.</p>
+  </div>
+
+  <div class="greybg container">
+    <p class="meet">Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation’s <span class="boldupper">TOP LOCAL GOVERNMENT EXPERTS</span>.</p>
+  </div>
+
+  <div>
+    <img class="kvk2" src="./kvk2.jpg" alt="Kurt speaking" />
+  </div>
+
+  <!-- Priorities -->
+  <div class="greybg container">
+    <p><i>His priorities are the same as yours:</i></p>
+    <ol class="talkingpoints">
+      <li><strong>Help with the spiraling cost of living here</strong></li>
+      <li><strong>Promote the economy and job opportunities</strong></li>
+      <li><strong>Stop repeated flood disasters</strong></li>
+      <li><strong>Enhance quality of life and property values</strong></li>
+      <li><strong>Support families and intelligent discussion</strong></li>
+    </ol>
+  </div>
+
 </body>
 </html>
