--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
   <div class="container greybg contactdiv mt-4">
     <img class="newlogo" src="./newkvklogo.png" alt="KVK campaign logo" />
 
-    <form name="contact" method="POST" data-netlify="true" netlify data-netlify-honeypot="bot-field" action="/thank-you.html" class="form contactform">
+    <form name="contact" method="POST" data-netlify="true" netlify data-netlify-honeypot="bot-field" action="./thank-you.html" class="form contactform">
       <input type="hidden" name="form-name" value="contact">
       <input type="hidden" name="bot-field">
       <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below or email: 
