fixed checkboxes for form submission

--- a/contact.html
+++ b/contact.html
@@ -149,20 +149,23 @@
         <textarea class="form-control" id="message" name="message" rows="4" placeholder="I know a way to help your campaign"></textarea>
       </div>
 
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="signup">
+
+      </div>
+      <div class="form-check mb-2">
+        <input type="checkbox" class="form-check-input" id="signup" name="Newsletter" value="Yes">
         <label class="form-check-label" for="signup">Sign Up For Newsletter</label>
       </div>
-
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="lawnsign">
+      
+      <div class="form-check mb-2">
+        <input type="checkbox" class="form-check-input" id="lawnsign" name="LawnSign" value="Yes">
         <label class="form-check-label" for="lawnsign">Lawn Sign</label>
       </div>
-
+      
       <div class="form-check mb-4">
-        <input type="checkbox" class="form-check-input" id="volunteer">
+        <input type="checkbox" class="form-check-input" id="volunteer" name="Volunteer" value="Yes">
         <label class="form-check-label" for="volunteer">Volunteer</label>
       </div>
+
 
       <div class="text-center">
         <button type="submit" class="btn button">Submit</button>
