--- a/index.html
+++ b/index.html
@@ -60,104 +60,7 @@
   <link rel="icon" href="./kvkfavicon.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
-      color: #212529;
-    }
-
-    .navbar {
-      background-color: #003366;
-    }
-
-    .navbar-nav .nav-link {
-      color: white !important;
-      font-weight: 600;
-    }
-
-    .navbar-nav .nav-link:hover {
-      text-decoration: underline;
-    }
-
-    .banner {
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-
-    .vote {
-      font-size: 2.5rem;
-      font-weight: 700;
-      color: #cc0000;
-    }
-
-    .bwpic {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 8px;
-      margin: 1rem 0;
-    }
-
-    .greybg {
-      background-color: #e9ecef;
-      padding: 2rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-    }
-
-    .gold {
-      color: goldenrod;
-      font-size: 2rem;
-      font-weight: 700;
-    }
-
-    .blue {
-      color: #003366;
-      font-size: 1.5rem;
-      font-weight: 600;
-    }
-
-    .blue2 {
-      color: #0056b3;
-    }
-
-    .kvk2 {
-      width: 100%;
-      max-width: 400px;
-      display: block;
-      margin: 2rem auto;
-      border-radius: 8px;
-    }
-
-    .effective, .meet {
-      font-size: 1.25rem;
-      text-align: center;
-    }
-
-    .boldupper {
-      text-transform: uppercase;
-      font-weight: 700;
-    }
-
-    .talkingpoints li {
-      margin-bottom: 0.75rem;
-      font-size: 1.1rem;
-    }
-
-    .button {
-      background-color: #cc0000;
-      color: white;
-      font-weight: bold;
-      border-radius: 5px;
-      padding: 0.5rem 1.25rem;
-      border: none;
-      transition: background-color 0.3s ease;
-    }
-
-    .button:hover {
-      background-color: #a30000;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
