--- a/index.html
+++ b/index.html
@@ -1,56 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <title>Vote for KVK!</title>
-    <link rel="icon" type="image/x-icon" href="./kvkfavicon.png">
-</head>
-<body>
-        <nav class="navbar-nav mx-auto">
-            <ul>
-                <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li>
-                <li><a href="./experience.html">Experience</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./contact.html">Volunteer</a></li>
-                <li><a href="https://www.anedot.com/"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
-            </ul>
-        </nav>
-
-    <div class="banner greybg container"><h1 class="vote"><i>Vote KVK!</i></h1>
-    <img class="bwpic" src="./kvkpic.jpg"/>
-    <h1 class="vote"><i>Vote KVK!</i></h1>
-    </div><br>
-    <div class="greybg container">
-    <h1 class="gold">Kurt van Kuller</h1>
-
-    <h3 class="for"><i>for</i></h3>
-    <h2 class="blue"> WESTCHESTER COUNTY LEGISLATOR, DISTRICT 7</h2> 
-    <h2 class="blue2">(Larchmont, Mamaroneck, Rye, Harrison)</h2>
-    </div>
-
-  
-    <div class="greybg container"><p class="effective">For effective, professional leadership! <br>No more broken promises! <br>Let&#39;s elect someone who understands us and delivers on what&#39;s important.</p></div><br>
-    <div class="greybg container"><p class="meet">Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation&#39;s <span class="boldupper">TOP LOCAL
-        GOVERNMENT EXPERTS</span>.</p></div>
-  
-       <div> <img class="kvk2" src="./kvk2.jpg"/> </div>
-       <div class="greybg container">
-       <p><i>His priorities are the same as yours: </i></p>
-       <ol class="talkingpoints homeli">
-        <b><li><b>Help with the spiraling cost of living here</li></b>
-        <b><li>Promote the economy and job opportunities</li></b>
-        <b><li>Stop repeated flood disasters</li></b>
-        <b><li>Enhance quality of life and property values</li></b>
-        <b><li>For families and intelligent discussion</li></b>
-       </ol>
-    </div>
-      
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -80,7 +27,7 @@
   <!-- Main Banner -->
   <div class="banner">
     <h1 class="vote">Vote KVK!</h1>
-    <img class="bwpic" src="./kvkpic.jpg" alt="Kurt van Kuller" />
+    <img class="bwpic img-fluid" src="./kvkpic.jpg" alt="Kurt van Kuller" />
     <h1 class="vote">Vote KVK!</h1>
   </div>
 
@@ -102,7 +49,7 @@
   </div>
 
   <div>
-    <img class="kvk2" src="./kvk2.jpg" alt="Kurt speaking" />
+    <img class="kvk2 img-fluid rounded mb-4 mx-auto d-block" src="./kvk2.jpg" alt="Kurt speaking" />
   </div>
 
   <!-- Priorities -->
