--- a/ontheissues.html
+++ b/ontheissues.html
@@ -28,7 +28,7 @@
 
   <!-- Issues Section -->
   <div class="container bggreyissues firstissue">
-    <span class="red">JUST CUT TAXES ALREADY!</span>
+    <h4>JUST CUT TAXES ALREADY!</h4>
     <p>Property Taxes in Westchester (and <i>especially</i> the Sound Shore) remain the <strong><u class="uppercase">highest</u> in the United States!</strong> The County can afford to lower them. This will <u>lower rents</u> too!</p>
     <ul>
       <li>Reduce the sky-high mortgage recording tax and real estate transfer taxes.</li>
@@ -37,7 +37,7 @@
   </div>
 
   <div class="container bggreyissues">
-    <span class="red">GIVE US OUR FAIR SHARE!</span>
+    <h4>GIVE US OUR FAIR SHARE!</h4>
     <p>Our District pays more in taxes to NY State and Westchester County than it gets back in services.</p>
     <ul>
       <li>Oppose MTA payroll tax hikes and the congestion pricing tax.</li>
@@ -45,7 +45,7 @@
   </div>
 
   <div class="container bggreyissues">
-    <span class="red">STOP CON ED'S OUTRAGEOUS RATE HIKES!</span>
+    <h4>STOP CON ED'S OUTRAGEOUS RATE HIKES!</h4>
     <p>Kurt wants to:</p>
     <ol>
       <li>Lower high local taxes on Con Ed that inflate our bills</li>
@@ -56,7 +56,7 @@
   </div>
 
   <div class="container bggreyissues">
-    <span class="red">FIX THE FLOODING PROBLEM FINALLY!</span>
+    <h4>FIX THE FLOODING PROBLEM FINALLY!</h4>
     <p>Heavy rains still threaten homes and families. Residents face repair costs and rising flood insurance premiums. <strong class="uppercase">Very little has been done</strong> over many years to mitigate the risks.</p>
     <ul>
       <li>Much of Mamaroneck’s flooding comes from storm system neglect and overdevelopment. <strong>Your local representatives <span class="uppercase">must</span> answer for this!</strong></li>
@@ -64,7 +64,7 @@
   </div>
 
   <div class="container bggreyissues">
-    <span class="red">PROTECT OUR GREAT QUALITY OF LIFE!</span>
+    <h4>PROTECT OUR GREAT QUALITY OF LIFE!</h4>
     <p>Let’s make our streets <span class="uppercase">safer</span> and <i>keep our schools focused on the <span class="uppercase">right priorities</span></i>.</p>
     <ul>
       <li>End "Sanctuary County" games that risk losing $100s of millions in federal aid. Protect our Latin American neighborhoods that enrich our lives.</li>
@@ -77,7 +77,7 @@
   </div>
 
   <div class="container bggreyissues mb-5">
-    <span class="red">KEEP NATIONAL POLITICS OUT OF DISTRICT 7!</span>
+    <h4>KEEP NATIONAL POLITICS OUT OF DISTRICT 7!</h4>
     <p>District 7’s needs don’t match national narratives. Kurt is a proven manager and problem-solver who <strong class="uppercase">uses common sense</strong>, not ideology!</p>
     <ul>
       <li>Restore a traditional two-party system of checks and balances to the County Legislature.</li>
