fixed picture a bit

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -70,9 +70,10 @@
       <li>End "Sanctuary County" games that risk losing $100s of millions in federal aid. Protect our Latin American neighborhoods that enrich our lives.</li>
       <li>Expand recreational facilities for youth. Continue efforts to clean the Sound.</li>
     </ul>
-    <div class="text-center">
-      <img class="kvkfamily" src="./kvkfamily.jpg" alt="KVK with family" />
-      <img class="kvk3" src="./kvk3.jpg" alt="KVK speaking" />
+    
+    <div class="kvk-row">
+      <img class="kvkfamily img-fluid" src="./kvkfamily.jpg" alt="Kurt with family" />
+      <img class="kvk3 img-fluid" src="./kvk3.jpg" alt="Kurt" />
     </div>
   </div>
 
