--- a/index.html
+++ b/index.html
@@ -9,20 +9,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-md">
+
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
-        <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
-        <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://www.anedot.com/"><button class="button">DONATE<br>$&nbsp;$&nbsp;$</button></a></li>
-      </ul>
+      <a class="navbar-brand" href="#">KVK</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="main-navbar">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.anedot.com/">
+              <button class="button btn">DONATE<br>$&nbsp;$&nbsp;$</button>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
+
+   
 
   <!-- Main Banner -->
   <div class="banner">
