--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,31 @@
  
 
 </head>
-<bod class="contact-page">
+<body class="contact-page">
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-md">
+
+
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
-        <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
-        <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://www.anedot.com/"><button class="button">DONATE<br>$&nbsp;$&nbsp;$</button></a></li>
-      </ul>
+      <a class="navbar-brand" href="./index.html">KVK</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="main-navbar">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.anedot.com/">
+              <button class="button btn">DONATE<br>$&nbsp;$&nbsp;$</button>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
