--- a/experience.html
+++ b/experience.html
@@ -9,11 +9,10 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-
+ 
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
-      <a class="navbar-brand" href="#">KVK</a>
+      <a class="navbar-brand" href="./index.html">KVK</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,7 +20,8 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
           <li class="nav-item">
@@ -33,7 +33,7 @@
       </div>
     </div>
   </nav>
-
+  
   <!-- Intro -->
   <div class="container greybgexp mt-4 text-center">
     <h2>Choose a proven over-achiever, a renowned <span class="uppercase">expert</span> in Local Government Finance!</h2>
