--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body>
 
-
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
-      <a class="navbar-brand" href="#">KVK</a>
+      <a class="navbar-brand" href="./index.html">KVK</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
@@ -35,8 +35,6 @@
       </div>
     </div>
   </nav>
-
-   
 
   <!-- Main Banner -->
   <div class="banner">
