--- a/ontheissues.html
+++ b/ontheissues.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
-      <a class="navbar-brand" href="#">KVK</a>
+      <a class="navbar-brand" href="./index.html">KVK</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,6 +25,7 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
