--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
 <body class="contact-page">
 
 
-
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
       <a class="navbar-brand" href="./index.html">KVK</a>
@@ -25,7 +24,7 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
@@ -38,7 +37,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Contact Form -->
   <div class="container greybg contactdiv mt-4">
     <img class="newlogo img-fluid" src="./newkvklogo.png" alt="KVK campaign logo" />
