--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
@@ -33,7 +33,7 @@
       </div>
     </div>
   </nav>
-  
+
   <!-- Intro -->
   <div class="container greybgexp mt-4 text-center">
     <h2>Choose a proven over-achiever, a renowned <span class="uppercase">expert</span> in Local Government Finance!</h2>
