--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
@@ -35,7 +35,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Main Banner -->
   <div class="banner">
     <h1 class="vote">Vote KVK!</h1>
