--- a/ontheissues.html
+++ b/ontheissues.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./index.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
