--- a/thank-you.html
+++ b/thank-you.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body class="text-center p-5">
   <h1 class="mb-4">🎉 Thank you!</h1>
   <p>Your message has been submitted. We'll get back to you soon.</p>
