replaced b & w kvk with new kvk headhsot

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </div>
     </div>
   </nav>
-  
+
   <!-- Main Banner -->
   <div class="banner">
     <h1 class="vote">Vote KVK!</h1>
-    <img class="bwpic img-fluid" src="./kvkpic.jpg" alt="Kurt van Kuller" />
+    <img class="bwpic img-fluid" src="./kvknewheadshot.jpg" alt="Kurt van Kuller" />
     <h1 class="vote">Vote KVK!</h1>
   </div>
 
