--- a/ontheissues.html
+++ b/ontheissues.html
@@ -79,6 +79,7 @@
     <ul>
       <li>End "Sanctuary County" games that risk losing $100s of millions in federal aid. Protect our Latin American neighborhoods that enrich our lives.</li>
       <li>Expand recreational facilities for youth. Continue efforts to clean the Sound.</li>
+      <li>Save Playland - Improve County Management.</li>
     </ul>
     
     <div class="kvk-row">
