--- a/experience.html
+++ b/experience.html
@@ -43,7 +43,7 @@
 
   <!-- Bio Content -->
   <div class="container text-center mt-4">
-    <img class="kvk5" src="./kvk5.jpg" alt="Kurt van Kuller" />
+    <img img-fluid class="kvk5" src="./kvk5.jpg" alt="Kurt van Kuller" />
   </div>
 
   <div class="container greybgexp">
