--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   </nav>
   <!-- Contact Form -->
   <div class="container greybg contactdiv mt-4">
-    <img class="newlogo img-fluid" src="./logo42425.png" alt="KVK campaign logo" />
+    <img class="newlogo img-fluid" src="./logo42425.jpg" alt="KVK campaign logo" />
 
     <form name="contact" method="POST" data-netlify="true" netlify data-netlify-honeypot="bot-field" action="./thank-you.html" class="form contactform">
       <input type="hidden" name="form-name" value="contact">
