--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,7 @@
   </div>
 
   <div class="container greybgexp">
-    <p><strong><u>Leading Municipal Finance Expert:</u></strong> Legendary 47-year career in Public Finance on Wall Street. Nationally known in municipal bond market; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world's largest banks. Managed departments of professionals, including 16 years as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm. <strong>Now a Full Time Public Servant.</strong></p>
+    <p><strong><u>Leading Municipal Finance Expert:</u></strong> Legendary 47-year career in Public Finance on Wall Street. Nationally known in municipal bond market; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world's largest banks. Managed departments of professionals, including as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm. <strong>Now a Full Time Public Servant.</strong></p>
   </div>
 
   <div class="container greybgexp">
