--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <p class="meet">Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation’s <span class="boldupper">TOP LOCAL GOVERNMENT EXPERTS</span>.</p>
   </div>
 
-  <div>
+  <div class="container">
     <img class="kvk2 img-fluid rounded mb-4 mx-auto d-block" src="./kvk2.jpg" alt="Kurt speaking" />
   </div>
 
