changed to published research

--- a/experience.html
+++ b/experience.html
@@ -73,7 +73,7 @@
   </div>
 
   <div class="container greybgexp">
-    <p><strong><u>Widely Recognized Public Speaker and Media Commentator</u></strong> on municipal bonds. Extensive press portfolio and research published. Regular conference organizer and chairman. LinkedIn Champion.</p>
+    <p><strong><u>Widely Recognized Public Speaker and Media Commentator</u></strong> on municipal bonds. Extensive press portfolio and published research. Regular conference organizer and chairman. LinkedIn Champion.</p>
   </div>
 
   <div class="container greybgexp">
