added award photo

--- a/experience.html
+++ b/experience.html
@@ -43,7 +43,7 @@
 
   <!-- Bio Content -->
   <div class="container text-center mt-4">
-    <img img-fluid class="kvk5" src="./kvk5.jpg" alt="Kurt van Kuller" />
+    <img  class="kvk5 img-fluid" src="./kvk5.jpg" alt="Kurt van Kuller" />
   </div>
 
   <div class="container greybgexp">
@@ -51,7 +51,7 @@
   </div>
 
   <div class="container text-center mt-4">
-    <img class="kvkandmom" src="./kvkandmom.png" alt="Kurt and mother" />
+    <img class="kvkandmom img-fluid" src="./kvkandmom.png" alt="Kurt and mother" />
   </div>
 
   <div class="container greybgexp">
@@ -60,6 +60,9 @@
 
   <div class="container greybgexp">
     <p><strong><u>Unprecedented Amount of Awards</u></strong> as a Municipal Bond analyst:</p>
+    <div class="container text-center mt-4">
+    <img class="img-fluid kvkaward" src="./kvkaward.jpg" alt="Kurt accepting award"/>
+  </div>
     <ul>
       <li>First place 11 times in <em>Institutional Investor</em>, twice in <em>The Bond Buyer</em>, 19 times in <em>Smiths Research and Gradings</em>.</li>
       <li>Second and third place awards received 11 additional times.</li>
