made ul li font size same size/ bigger as parents

--- a/experience.html
+++ b/experience.html
@@ -61,7 +61,7 @@
   <div class="container greybgexp">
     <p><strong><u>Unprecedented Amount of Awards</u></strong> as a Municipal Bond analyst:</p>
     <div class="container text-center mt-4">
-    <img class="img-fluid kvkaward" src="./kvkaward.jpg" alt="Kurt accepting award"/>
+    <img class="img-fluid kvkaward d-block mx-auto mt-4 kvkaward" src="./kvkaward.jpg" alt="Kurt accepting award"/>
   </div>
     <ul>
       <li>First place 11 times in <em>Institutional Investor</em>, twice in <em>The Bond Buyer</em>, 19 times in <em>Smiths Research and Gradings</em>.</li>
