added img of award

--- a/experience.html
+++ b/experience.html
@@ -77,6 +77,7 @@
 
   <div class="container greybgexp">
     <p><strong><u>Widely Recognized Public Speaker and Media Commentator</u></strong> on municipal bonds. Extensive press portfolio and published research. Regular conference organizer and chairman. LinkedIn Champion.</p>
+    <img class="img-fluid kvkaward d-block mx-auto mt-4 kvkspeaking" src="./kvkspeaking.jpg" alt="Kurt speaking"/>
   </div>
 
   <div class="container greybgexp">
