deleted $ from donate

--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,9 @@
     </div>
   </nav>
   <!-- Contact Form -->
-  <div class="container greybg contactdiv mt-4">
-    <img class="newlogo img-fluid" src="./logo42425.jpg" alt="KVK campaign logo" />
+  <img class="newlogo img-fluid mt-5" src="./logo42425.jpg" alt="KVK campaign logo" />
+
+  <div class="container greybg contactdiv mt-3">
 
     <form name="contact" method="POST" data-netlify="true" netlify data-netlify-honeypot="bot-field" action="./thank-you.html" class="form contactform">
       <input type="hidden" name="form-name" value="contact">
@@ -129,7 +130,7 @@
       </div>
       
 
-      <div class="text-center">
+      <div class="text-center mb-5">
         <button type="submit" class="btn button">Submit</button>
       </div>
     </form>
