--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.anedot.com/">
-              <button class="button btn">DONATE<br>$&nbsp;$&nbsp;$</button>
+              <button class="button btn">DONATE
+                <!-- <br>$&nbsp;$&nbsp;$ -->
+              </button>
             </a>
           </li>
         </ul>
@@ -52,11 +54,11 @@
   </div>
 
   <!-- Message -->
-  <div class="greybg container">
+  <div class="greybg container text-center">
     <p class="effective">For effective, professional leadership!<br>No more broken promises!<br>Let’s elect someone who understands us and delivers on what’s important.</p>
   </div>
 
-  <div class="greybg container">
+  <div class="greybg container text-center">
     <p class="meet">Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation’s <span class="boldupper">TOP LOCAL GOVERNMENT EXPERTS</span>.</p>
   </div>
 
@@ -64,10 +66,9 @@
     <img class="kvk2 img-fluid rounded mb-4 mx-auto d-block" src="./kvk2.jpg" alt="Kurt speaking" />
   </div>
 
-  <!-- Priorities -->
-  <div class="greybg container">
-    <p><i>His priorities are the same as yours:</i></p>
-    <ol class="talkingpoints">
+  <div class="greybg container text-center mb-5">
+    <p><em>His priorities are the same as yours:</em></p>
+    <ol class="talkingpoints text-center">
       <li><strong>Help with the spiraling cost of living here</strong></li>
       <li><strong>Promote the economy and job opportunities</strong></li>
       <li><strong>Stop repeated flood disasters</strong></li>
@@ -75,6 +76,17 @@
       <li><strong>Support families and intelligent discussion</strong></li>
     </ol>
   </div>
+
+  <!-- <div class="greybg container text-center">
+    <p><em>His priorities are the same as yours:</em></p>
+    <ol class="talkingpoints list-unstyled">
+      <li><strong>Help with the spiraling cost of living</strong></li>
+      <li><strong>Promote the economy and job opportunities</strong></li>
+      <li><strong>Stop repeated flood disasters</strong></li>
+      <li><strong>Enhance quality of life and property values</strong></li>
+      <li><strong>Support families and intelligent discussion</strong></li>
+    </ol>
+  </div> -->
 
 </body>
 </html>
