--- a/ontheissues.html
+++ b/ontheissues.html
@@ -36,6 +36,7 @@
   </nav>
 
   <!-- Issues Section -->
+   <div><h2 class="takesstand">Kurt on the issues</h2></div>
   <div class="container bggreyissues firstissue">
     <h4>JUST CUT TAXES ALREADY!</h4>
     <p>Property Taxes in Westchester (and <i>especially</i> the Sound Shore) remain the <strong><u class="uppercase">highest</u> in the United States!</strong> The County can afford to lower them. This will <u>lower rents</u> too!</p>
@@ -81,10 +82,9 @@
       <li>Save Playland - Improve County Management.</li>
     </ul>
     
-    <div class="kvk-row">
+
       <img class="kvkfamily img-fluid" src="./kvkfamily.jpg" alt="Kurt with family" />
-      <img class="kvk3 img-fluid" src="./kvk3.jpg" alt="Kurt" />
-    </div>
+  
   </div>
 
   <div class="container bggreyissues mb-5">
@@ -93,6 +93,7 @@
     <ul>
       <li>Restore a traditional two-party system of checks and balances to the County Legislature.</li>
     </ul>
+    <img class="kvk3 img-fluid" src="./kvk3.jpg" alt="Kurt" />
   </div>
 
 </body>
