--- a/experience.html
+++ b/experience.html
@@ -14,6 +14,7 @@
  
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,7 +28,8 @@
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.anedot.com/">
-              <button class="button btn">DONATE<br>$&nbsp;$&nbsp;$</button>
+              <button class="button btn">DONATE
+                <!-- <br>$&nbsp;$&nbsp;$</button> -->
             </a>
           </li>
         </ul>
