fixed buttons and changed to a tags with btn class

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.anedot.com/">
-              <button class="button btn">DONATE
-                <!-- <br>$&nbsp;$&nbsp;$ -->
-              </button>
-            </a>
+            <a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a>
           </li>
         </ul>
       </div>
