--- a/experience.html
+++ b/experience.html
@@ -26,12 +26,11 @@
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.anedot.com/">
-              <button class="button btn">DONATE
-                <!-- <br>$&nbsp;$&nbsp;$</button> -->
-            </a>
-          </li>
+       =
+            <li class="nav-item">
+              <a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a>
+            </li>
+        
         </ul>
       </div>
     </div>
