fixed sizes and centered images on issues page

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -81,7 +81,7 @@
     </ul>
     
 
-      <img class="kvkfamily img-fluid" src="./kvkfamily.jpg" alt="Kurt with family" />
+      <img class="kvkfamily img-fluid d-block mx-auto " src="./kvkfamily.jpg" alt="Kurt with family" />
   
   </div>
 
@@ -91,7 +91,7 @@
     <ul>
       <li>Restore a traditional two-party system of checks and balances to the County Legislature.</li>
     </ul>
-    <img class="kvk3 img-fluid" src="./kvk3.jpg" alt="Kurt" />
+    <img class="kvk3 img-fluid d-block mx-auto" src="./kvk3.jpg" alt="Kurt" />
   </div>
 
 </body>
