--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
   <div class="container greybg contactdiv mt-3">
 
-    <form name="contact" method="POST" data-netlify="true" netlify data-netlify-honeypot="bot-field" action="./thank-you.html" class="form contactform">
+    <form name="contact" method="POST" action="https://formsubmit.co/your@email.com" class="form contactform">
       <input type="hidden" name="form-name" value="contact">
       <input type="hidden" name="bot-field">
       <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below or email: 
@@ -94,7 +94,7 @@
         
           <div class="col-md-6 mb-3">
             <label class="form-label bigger" for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="georgewashington@gmail.com">
+            <input type="email" class="form-control" id="email" name="email" placeholder="georgewashington@gmail.com" required>
           </div>
         </div>
 
