--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
   <div class="container greybg contactdiv mt-3">
 
     <form name="contact" method="POST" action="https://formsubmit.co/friendsofkurtvk@gmail.com" class="form contactform">
-      <input type="hidden" name="form-name" value="contact">
+      <!-- <input type="hidden" name="form-name" value="contact"> -->
       <!-- <input type="hidden" name="bot-field"> -->
       <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below or email: 
         <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkvk@gmail.com</u></a>.
