--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -40,9 +40,9 @@
 </p>
 
 <p>
-    Lets add another page called Endorsements. At the top of the page put the word "Endorsements"
+    <!-- Lets add another page called Endorsements. At the top of the page put the word "Endorsements" -->
 
-
+<!-- 
 David Mathews
 
 
@@ -53,7 +53,7 @@ Underneath the red line write "AROUND DISTRICT 7"
 Below this will be photos of Anna Marie, Paul Harrison, another with Dave Mathews,  one at Resurrection, one at Rye Free Reading Room, one at City Hall (courtesy of myRye.com)
 
 You can add the Map of District 7
-
+ -->
 
 
 
