--- a/ontheissues.html
+++ b/ontheissues.html
@@ -80,7 +80,7 @@
     </ul>
     
 
-      <img class="kvkfamily img-fluid d-block mx-auto " src="./kvkfamily.jpg" alt="Kurt with family" />
+      <img class="kvkfamily img-fluid d-block mx-auto " src="./kvkfamilysub.jpg" alt="Kurt with family" />
   
   </div>
 
