new pic of mom and dad

--- a/experience.html
+++ b/experience.html
@@ -47,7 +47,7 @@
   </div>
 
   <div class="container text-center mt-4">
-    <img class="kvkandmom img-fluid" src="./kvkandmom.png" alt="Kurt and mother" />
+    <img class="kvkandmom img-fluid" src="./momdadcityhall.jpeg" alt="Kurt and mother" />
   </div>
 
   <div class="container greybgexp">
