--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -33,10 +33,10 @@
 
       <div><h2 class="takesstand">Around Town</h2></div>
       <div class="container">
-    <p>Keith Cunningham, Rye City Councilman
-    January 2024 - Present
+    <p><img class="img-fluid keithcunningham mx-auto" src="./keithcunningham.jpg" />Keith Cunningham, Rye City Councilman
+    January 2024 - Present <br>
     
-    "Kurt van Kuller is an outstanding choice to represent our District in the County Legislature. His municipal finance experience will be a real asset for ll of us."
+    "Kurt van Kuller is an outstanding choice to represent our District in the County Legislature. His municipal finance experience will be a real asset for all of us."
 </p>
 
 <p>
