--- a/ontheissues.html
+++ b/ontheissues.html
@@ -12,7 +12,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body>
 
-  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
+  <nav class="navbar navbar-expand-md navbar-dark nav-menu" style="background-color: #003366;">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
