deleted endorsement and moved to endorsements page

--- a/endorsements.html
+++ b/endorsements.html
@@ -32,7 +32,14 @@
         </div>
       </nav>
 
-  
+      <div><h2 class="takesstand">Around Town</h2></div>
+      <div class="container">
+    <p><img class="img-fluid keithcunningham mx-auto" src="./keithcunningham.jpg" />Keith Cunningham, Rye City Councilman
+    January 2024 - Present <br>
+    
+    "Kurt van Kuller is an outstanding choice to represent our District in the County Legislature. His municipal finance experience will be a real asset for all of us."
+</p>
+
 <p>
     <!-- Lets add another page called Endorsements. At the top of the page put the word "Endorsements" -->
 
