--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -48,6 +48,7 @@ Dave Mathews,
 
  -->
 
+ <img src="./cosmo&alexpisanobros.jpg img-fluid mx-auto" alt="Cosmo & Alex Pisano Brothers Deli">
 
 </div>
 </body>
