fixing photos on District 7 page

--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -31,11 +31,16 @@
         </div>
       </nav>
 
-  <div class="container">
-    <img class="img-fluid" src="./district7.jpg" alt="Map of District 7"/>
+      <div class="container greybgexp mt-4 text-center">
+        <h2>Around District 7</h2>
+      </div>
+
+  <div class="container mt-5 mb-5">
+    <img class="img-fluid district7 mx-auto" src="./district7.jpg" alt="Map of District 7"/>
   </div>
 
    <!--
+  Around District 7
 Map of District 7
 
 Anna Marie, 
@@ -47,8 +52,9 @@ Dave Mathews,
 
 
  -->
-
- <img src="./cosmo&alexpisanobros.jpg img-fluid mx-auto" alt="Cosmo & Alex Pisano Brothers Deli">
+<div class="container mt-5 mb-5">
+ <img class="img-fluid mx-auto district7"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+</div>
 
 </div>
 </body>
