--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -53,13 +53,32 @@ Dave Mathews,
 
  -->
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./boiano.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+  <img class="img-fluid mx-auto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto"  src="./annamaria.jpg" alt="Kurt with Anna Maria in front of Anna Maria's Wine Bar">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto"  src="./davetalking.jpg" alt="talking with Dave Matthews in Rye">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto"  src="./boiano.jpg" alt="Boiano Bakery">
  </div>
 
 <div class="container mt-5 mb-5">
  <img class="img-fluid mx-auto"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
-
 
 
 <div class="container mt-5 mb-5">
