swapped photo to issues page

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -41,7 +41,11 @@
       <li>Lower the Sales Tax raised in 2019. Support local businesses and give breaks to first responders and the neediest.</li>
     </ul>
   </div>
-
+  <div class="container mb-5">
+    <img class="img-fluid mx-auto"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
+   </div>
+  
+    
   <div class="container bggreyissues">
     <h4>GIVE US OUR FAIR SHARE!</h4>
     <p>Our District pays more in taxes to NY State and Westchester County than it gets back in services.</p>
