--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -61,15 +61,15 @@ Dave Mathews,
  </div>
 
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
- </div>
-
- <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto"  src="./paulharrison.jpg" alt="Paul Harrison, manager of Bareburger in Rye">
  </div>
 
  <div class="container mt-5 mb-5">
   <img class="img-fluid mx-auto"  src="./davetalking.jpg" alt="talking with Dave Matthews in Rye">
+ </div>
+
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto"  src="./friendinpark.jpg" alt="Talking in park">
  </div>
 
  <div class="container mt-5 mb-5">
