--- a/ontheissues.html
+++ b/ontheissues.html
@@ -42,7 +42,10 @@
     </ul>
   </div>
   <div class="container mb-5">
+    <figure>
     <img class="img-fluid mx-auto"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
+    <figcaption style="font-size: 0.8rem; text-align: center;">Kurt in Rye City Hall courtesy of myRYE.com</figcaption>
+    </figure>
    </div>
   
     
