fixed up style of city hall pic

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -43,7 +43,7 @@
   </div>
   <div class="container mb-5">
     <figure>
-    <img class="img-fluid mx-auto"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
+    <img class="img-fluid mx-auto ryecityhall"  src="./kurtcityhall.jpg" alt="Kurt in Rye City Hall">
     <figcaption style="font-size: 0.8rem; text-align: center;">Kurt in Rye City Hall courtesy of myRye.com</figcaption>
     </figure>
    </div>
