added new Donate link

--- a/experience.html
+++ b/experience.html
@@ -25,11 +25,12 @@
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
-          <li class="nav-item"><a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a></li>
+          <li class="nav-item"><a class="nav-link btn button" href="https://secure.anedot.com/friends-of-kurt-van-kuller/donate">DONATE</a></li>
         </ul>
       </div>
     </div>
   </nav>
+
 
 
   <!-- Intro -->
