--- a/endorsements.html
+++ b/endorsements.html
@@ -12,24 +12,25 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body>
     
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
-        <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      
-          <div class="collapse navbar-collapse nav-menu" id="main-navbar">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
-              <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
-              <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
-              <li class="nav-item"><a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse nav-menu" id="main-navbar">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
+          <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
+          <li class="nav-item"><a class="nav-link btn button" href="https://secure.anedot.com/friends-of-kurt-van-kuller/donate">DONATE</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
 
       <div><h2 class="takesstand">A</h2></div>
       <div class="container">
