made favicon changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<!-- Essential Open Graph tags -->
+<meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
+<meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
+<meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:url" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:type" content="website" />
+
+<!-- Optional: Twitter Cards for better social previews -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Vote KVK" />
+<meta name="twitter:description" content="Support Kurt van Kuller for County Legislature." />
+<meta name="twitter:image" content="https://votekvk.com/logo42425.jpg" />
+
+
+
+
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vote for KVK!</title>
