family pic replacement

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -87,7 +87,7 @@
     </ul>
     
 
-      <img class="kvkfamily img-fluid d-block mx-auto " src="./kvkfamilysub.jpg" alt="Kurt with family" />
+      <img class="kvkfamily img-fluid d-block mx-auto " src="./croppedfamilyphoto.jpg" alt="Kurt with family" />
   
   </div>
 
