--- a/endorsements.html
+++ b/endorsements.html
@@ -12,6 +12,7 @@
 <body>
     
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
+    <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,6 +27,7 @@
           <li class="nav-item"><a class="nav-link btn button" href="https://secure.anedot.com/friends-of-kurt-van-kuller/donate">DONATE</a></li>
         </ul>
       </div>
+    </div>
   </nav>
 
 
