erased Republican candidate for from for on index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- Candidate Info -->
   <div class="greybg container text-center">
     <h1 class="gold">Kurt van Kuller</h1>
-    <h3><i>Republican candidate for</i></h3>
+    <h3><i>for</i></h3>
     <h2 class="blue">WESTCHESTER COUNTY LEGISLATOR, DISTRICT 7</h2>
     <h2 class="blue2">(Larchmont, Mamaroneck, Rye, Harrison)</h2>
   </div>
