fixed contact form

--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,12 @@
     <form name="contact" method="POST" action="https://formsubmit.co/friendsofkurtvk@gmail.com" class="form contactform">
       <!-- <input type="hidden" name="form-name" value="contact"> -->
       <!-- <input type="hidden" name="bot-field"> -->
-      <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below or email: 
-        <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkvk@gmail.com</u></a>.
-        I&#39;ll respond as soon as possible. Thank you!
-      </p>
+      <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below, email: 
+        <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a>, or mail at: </p><br><div  class="address mt-2 mb-2 mx-auto text-center"><strong>Friends of Kurt van Kuller <br>P.O. Box 71 <br>41 Purdy Ave<br>Rye, NY 10580</div><br></strong>
+        <p class="mb-6 text-center">I&#39;ll respond as soon as possible. Thank you!</p>
+      
 
-      <div class="row">
+      <div class="row mt-6">
         <div class="col-md-6 mb-3">
           <label class="form-label bigger" for="fname">First Name</label>
           <input type="text" class="form-control" id="fname" name="fname">
