changed PO format and deleted line below address thank you respond

--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
       <!-- <input type="hidden" name="form-name" value="contact"> -->
       <!-- <input type="hidden" name="bot-field"> -->
       <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below, email: 
-        <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a>, or mail at: </p><br><div  class="address mt-2 mb-2 mx-auto text-center"><strong>Friends of Kurt van Kuller <br>P.O. Box 71 <br>41 Purdy Ave<br>Rye, NY 10580</div><br></strong>
-        <p class="mb-6 text-center">I&#39;ll respond as soon as possible. Thank you!</p>
+        <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a>, or mail at: </p><br><div  class="address mt-2 mb-2 mx-auto text-center"><strong>Friends of Kurt van Kuller <br>41 Purdy Ave<br> PO Box 71<br>Rye, NY 10580</div><br></strong>
+        <!-- <p class="mb-6 text-center">I&#39;ll respond as soon as possible. Thank you!</p> -->
       
 
       <div class="row mt-6">
