on issues - con ed # 4, changed impossible to unworkable, 100% by 2040 added

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -65,7 +65,7 @@
       <li>Lower high local taxes on Con Ed that inflate our bills</li>
       <li>Disgorge excessive profits and executive pay</li>
       <li>Stop subsidizing NYC's outdated grid</li>
-      <li>Revise NY State’s <span class="uppercase">impossible</span> energy <span class="uppercase">mandates</span> (70% carbon-free by 2030)</li>
+      <li>Revise NY State’s <span class="uppercase">unworkable</span> energy <span class="uppercase">mandates</span> (70% carbon-free by 2030, 100% by 2040)</li>
     </ol>
   </div>
 
