changed unworkable to unaffordable and changed 00s of millions to hundreds of millions of dollars

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -65,7 +65,7 @@
       <li>Lower high local taxes on Con Ed that inflate our bills</li>
       <li>Disgorge excessive profits and executive pay</li>
       <li>Stop subsidizing NYC's outdated grid</li>
-      <li>Revise NY State’s <span class="uppercase">unworkable</span> energy <span class="uppercase">mandates</span> (70% carbon-free by 2030, 100% by 2040)</li>
+      <li>Revise NY State’s <span class="uppercase">unaffordable</span> energy <span class="uppercase">mandates</span> (70% carbon-free by 2030, 100% by 2040)</li>
     </ol>
   </div>
 
@@ -81,7 +81,7 @@
     <h4>PROTECT OUR GREAT QUALITY OF LIFE!</h4>
     <p>Let’s make our streets <span class="uppercase">safer</span> and <i>keep our schools focused on the <span class="uppercase">right priorities</span></i>.</p>
     <ul>
-      <li>End "Sanctuary County" games that risk losing $100s of millions in federal aid. Protect our Latin American neighborhoods that enrich our lives.</li>
+      <li>End "Sanctuary County" games that risk losing hundreds of millions of dollars in federal aid. Protect our Latin American neighborhoods that enrich our lives.</li>
       <li>Expand recreational facilities for youth. Continue efforts to clean the Sound.</li>
       <li>Save Playland - Improve County Management.</li>
     </ul>
