unbolded mailing address

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
     </form>
   </div>
   </div>
-  <div  class="address mt-2 mb-2 mx-auto text-center"><u>Mailing Address: </u><br><strong>Friends of Kurt van Kuller <br>41 Purdy Ave, PO Box 71<br>Rye, NY 10580</strong></div><br></strong>
+  <div  class="address mt-2 mb-2 mx-auto text-center"><u>Mailing Address: </u><br>Friends of Kurt van Kuller <br>41 Purdy Ave, PO Box 71<br>Rye, NY 10580</div><br></strong>
   <div class="justify-content-center text-center mx-auto mb-5"><p class="emailclass">email: <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a></p></div>
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
