fixed script tags

--- a/endorsements.html
+++ b/endorsements.html
@@ -69,7 +69,8 @@ Write: Page in Progress then have some blank thumbnails or boxes to the side of 
 </p>
 -->
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
