--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -104,6 +104,7 @@ Dave Mathews,
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
