--- a/contact.html
+++ b/contact.html
@@ -148,6 +148,7 @@
   <div class="justify-content-center text-center mx-auto mb-5"><p class="emailclass">email: <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a></p></div>
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./script.js"></script>
 
 </body>
 </html>
