--- a/ontheissues.html
+++ b/ontheissues.html
@@ -116,6 +116,6 @@
     <img class="kvk3 img-fluid d-block mx-auto" src="./kvk3.jpg" alt="Kurt" />
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-
+<script src="./script.js"></script>
 </body>
 </html>
